# STM32PLCEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: BaseWindow.hpp  Controlers.hpp  MainWindow.hpp
src/: CommandHandle.cpp  InitLayout.cpp  InitMenu.cpp  NotifyHandle.cpp
